--- a/template-addon/Dockerfile
+++ b/template-addon/Dockerfile
@@ -8,7 +8,8 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN apk add --no-cache \
 python3 \
 git
-RUN git clone https://github.com/dchesterton/amcrest2mqtt.git /amcrest2mqtt
+RUN git clone https://github.com/dchesterton/amcrest2mqtt.git
+WORKDIR /amcrest2mqtt
 # Copy data for add-on
 COPY run.sh /
 COPY /amcrest2mqtt/src/amcrest2mqtt.py /
