--- a/amcrest2mqtt-addon/config.json
+++ b/amcrest2mqtt-addon/config.json
@@ -1,11 +1,11 @@
 {
-    "name": "Template",
-    "version": "1.0",
-    "slug": "template",
-    "description": "Template Add-on",
-    "url": "https://github.com/ikifar2012/ha-addon-template/blob/master/README.md",
+    "name": "amcrest2mqtt",
+    "version": "2022.1.0",
+    "slug": "amcrest2mqtt-addon",
+    "description": "A Home Assistant addon for amcrest2mqtt",
+    "url": "https://github.com/ikifar2012/amcrest2mqtt-addon/blob/master/README.md",
     "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
-    "image": "ikifar/ha-addon-template-{arch}",
+    "image": "ikifar/amcrest2mqtt-addon-{arch}",
     "startup": "services",
     "boot": "auto",
     "map": ["share:rw"],
