--- a/amcrest2mqtt-addon/Dockerfile
+++ b/amcrest2mqtt-addon/Dockerfile
@@ -25,17 +25,17 @@ ARG BUILD_ARCH
 
 # Labels
 LABEL \
-    io.hass.name="Template" \
-    io.hass.description="Template Add-on" \
+    io.hass.name="amcrest2mqtt" \
+    io.hass.description="A Home Assistant addon for amcrest2mqtt" \
     io.hass.arch="${BUILD_ARCH}" \
     io.hass.type="addon" \
     io.hass.version=${BUILD_VERSION} \
     maintainer="Matheson Steplock <mathesonsteplock.ca>" \
-    org.label-schema.description="Template Add-on" \
+    org.label-schema.description="A Home Assistant addon for amcrest2mqtt" \
     org.label-schema.build-date=${BUILD_DATE} \
-    org.label-schema.name="Template" \
+    org.label-schema.name="amcrest2mqtt" \
     org.label-schema.schema-version="1.0" \
-    org.label-schema.usage="https://github.com/ikifar2012/ha-addon-template/blob/master/README.md" \
+    org.label-schema.usage="https://github.com/ikifar2012/amcrest2mqtt-addon/blob/master/README.md" \
     org.label-schema.vcs-ref=${BUILD_REF} \
-    org.label-schema.vcs-url="https://github.com/ikifar2012/ha-addon-template/" \
+    org.label-schema.vcs-url="https://github.com/ikifar2012/amcrest2mqtt-addon/" \
     org.label-schema.vendor="Matheson's Home Assistant Addons"
