--- a/amcrest2mqtt-addon/Dockerfile
+++ b/amcrest2mqtt-addon/Dockerfile
@@ -12,8 +12,9 @@ git
 RUN git clone https://github.com/dchesterton/amcrest2mqtt.git
 # Copy data for add-on
 COPY run.sh /
-RUN cp /amcrest2mqtt/src/amcrest2mqtt.py /
-RUN cp /amcrest2mqtt/requirements.txt /
+RUN mv /amcrest2mqtt/src/amcrest2mqtt.py /
+RUN mv /amcrest2mqtt/requirements.txt /
+RUN rm -rf /amcrest2mqtt
 RUN python3 -m pip install --no-warn-script-location --prefix=/install -r /requirements.txt
 RUN chmod +x run.sh
 CMD [ "./run.sh" ]
