--- a/amcrest2mqtt-addon/config.json
+++ b/amcrest2mqtt-addon/config.json
@@ -14,41 +14,41 @@
     "ports_description": {
     },
     "options": {
-        "AMCREST_HOST":"",
-        "AMCREST_PORT":"80",
-        "AMCREST_USERNAME":"admin",
-        "AMCREST_PASSWORD":"",
-        "STORAGE_POLL_INTERVAL":"3600",
-        "DEVICE_NAME":"",
-        "MQTT_HOST":"",
-        "MQTT_QOS":"0",
-        "MQTT_PORT":"1883",
-        "MQTT_USERNAME":"",
-        "MQTT_PASSWORD":"",
-        "MQTT_TLS_ENABLED":"false",
-        "MQTT_TLS_CA_CERT":"",
-        "MQTT_TLS_CERT":"",
-        "MQTT_TLS_KEY":"",
-        "HOME_ASSISTANT":"true",
-        "HOME_ASSISTANT_PREFIX":""
+        "amcrest_host":"",
+        "amcrest_port":"80",
+        "amcrest_username":"admin",
+        "amcrest_password":"",
+        "storage_poll_interval":"3600",
+        "device_name":"",
+        "mqtt_host":"",
+        "mqtt_qos":"0",
+        "mqtt_port":"1883",
+        "mqtt_username":"",
+        "mqtt_password":"",
+        "mqtt_tls_enabled":"false",
+        "mqtt_tls_ca_cert":"",
+        "mqtt_tls_cert":"",
+        "mqtt_tls_key":"",
+        "home_assistant":"true",
+        "home_assistant_prefix":""
     },
     "schema": {
-      "AMCREST_HOST":"str",
-      "AMCREST_PORT":"int",
-      "AMCREST_USERNAME":"str",
-      "AMCREST_PASSWORD":"str",
-      "STORAGE_POLL_INTERVAL":"int",
-      "DEVICE_NAME":"str",
-      "MQTT_HOST":"str",
-      "MQTT_QOS":"int",
-      "MQTT_PORT":"int",
-      "MQTT_USERNAME":"str",
-      "MQTT_PASSWORD":"str",
-      "MQTT_TLS_ENABLED":"bool",
-      "MQTT_TLS_CA_CERT":"str",
-      "MQTT_TLS_CERT":"str",
-      "MQTT_TLS_KEY":"str",
-      "HOME_ASSISTANT":"bool",
-      "HOME_ASSISTANT_PREFIX":"str"
+      "amcrest_host":"str",
+      "amcrest_port":"int",
+      "amcrest_username":"str",
+      "amcrest_password":"str",
+      "storage_poll_interval":"int",
+      "device_name":"str",
+      "mqtt_host":"str",
+      "mqtt_qos":"int",
+      "mqtt_port":"int",
+      "mqtt_username":"str",
+      "mqtt_password":"str",
+      "mqtt_tls_enabled":"bool",
+      "mqtt_tls_ca_cert":"str",
+      "mqtt_tls_cert":"str",
+      "mqtt_tls_key":"str",
+      "home_assistant":"bool",
+      "home_assistant_prefix":"str"
     }
 }
