--- a/amcrest2mqtt-addon/config.json
+++ b/amcrest2mqtt-addon/config.json
@@ -1,55 +1,55 @@
 {
-    "name": "amcrest2mqtt",
-    "version": "2022.1.0",
-    "slug": "amcrest2mqtt-addon",
-    "description": "A Home Assistant addon for amcrest2mqtt",
-    "url": "https://github.com/ikifar2012/amcrest2mqtt-addon/blob/master/README.md",
-    "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
-    "image": "ikifar/amcrest2mqtt-addon-{arch}",
-    "startup": "services",
-    "boot": "auto",
-    "map": ["ssl:ro"],
-    "ports": {
-    },
-    "ports_description": {
-    },
-    "services": ["mqtt:want"],
-    "options": {
-        "amcrest_host":"",
-        "amcrest_port":"80",
-        "amcrest_username":"admin",
-        "amcrest_password":"",
-        "storage_poll_interval":"3600",
-        "device_name":"",
-        "mqtt_host":"",
-        "mqtt_qos":"0",
-        "mqtt_port":"1883",
-        "mqtt_username":"",
-        "mqtt_password":"",
-        "mqtt_tls_enabled":"false",
-        "mqtt_tls_ca_cert":"",
-        "mqtt_tls_cert":"",
-        "mqtt_tls_key":"",
-        "home_assistant":"true",
-        "home_assistant_prefix":""
-    },
-    "schema": {
-      "amcrest_host":"str",
-      "amcrest_port":"int",
-      "amcrest_username":"str",
-      "amcrest_password":"str",
-      "storage_poll_interval":"int",
-      "device_name":"str",
-      "mqtt_host":"str",
-      "mqtt_qos":"int",
-      "mqtt_port":"int",
-      "mqtt_username":"str",
-      "mqtt_password":"str",
-      "mqtt_tls_enabled":"bool",
-      "mqtt_tls_ca_cert":"str",
-      "mqtt_tls_cert":"str",
-      "mqtt_tls_key":"str",
-      "home_assistant":"bool",
-      "home_assistant_prefix":"str"
-    }
+  "name": "amcrest2mqtt",
+  "version": "2022.1.1",
+  "slug": "amcrest2mqtt-addon",
+  "description": "A Home Assistant addon for amcrest2mqtt",
+  "url": "https://github.com/ikifar2012/amcrest2mqtt-addon/blob/master/README.md",
+  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "image": "ikifar/amcrest2mqtt-addon-{arch}",
+  "startup": "services",
+  "boot": "auto",
+  "map": ["ssl:ro"],
+  "ports": {
+  },
+  "ports_description": {
+  },
+  "services": ["mqtt:want"],
+  "options": {
+      "amcrest_host": "",
+      "amcrest_port": "80",
+      "amcrest_username": "admin",
+      "amcrest_password": "",
+      "storage_poll_interval": "3600",
+      "device_name": "",
+      "mqtt_host": "",
+      "mqtt_qos": "0",
+      "mqtt_port": "1883",
+      "mqtt_username": "",
+      "mqtt_password": "",
+      "mqtt_tls_enabled": false,
+      "mqtt_tls_ca_cert": "",
+      "mqtt_tls_cert": "",
+      "mqtt_tls_key": "",
+      "home_assistant": true,
+      "home_assistant_prefix": ""
+  },
+  "schema": {
+    "amcrest_host": "str",
+    "amcrest_port": "int",
+    "amcrest_username": "str",
+    "amcrest_password": "str",
+    "storage_poll_interval": "int",
+    "device_name": "str",
+    "mqtt_host": "str",
+    "mqtt_qos": "int",
+    "mqtt_port": "int",
+    "mqtt_username": "str",
+    "mqtt_password": "str",
+    "mqtt_tls_enabled": "bool",
+    "mqtt_tls_ca_cert": "str",
+    "mqtt_tls_cert": "str",
+    "mqtt_tls_key": "str",
+    "home_assistant": "bool",
+    "home_assistant_prefix": "str"
+  }
 }
