--- a/amcrest2mqtt-addon/config.yaml
+++ b/amcrest2mqtt-addon/config.yaml
@@ -13,6 +13,7 @@ image: ikifar/amcrest2mqtt-addon-{arch}
 codenotary: cas@mathesonsteplock.ca
 startup: services
 boot: auto
+init: false
 map:
 - ssl:ro
 services:
